# rust-dnstest

./: .gitignore  Cargo.toml  Dockerfile  README.md  install.sh  k8s-dns-tests.sh
.github/workflows/: docker-image.yml
src/: cli.rs  cli_parser_clap.rs  cli_read_resolve.rs  dns_stats.rs  dns_types.rs  io.rs  main.rs  message.rs  parse.rs  stop_handler.rs  time_stamp.rs
src/message/: header.rs  question.rs
