[package]
name = "dnstest"
version = "0.1.0"
edition = "2021"
authors = ["Pieter Smit", "Adam Chalmers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
ascii = "1.0.0"
bitvec = "1.0.0"
chrono = "0.4.26"
chrono-tz = "0.8.3"
clap = { version = "4.3.23", features = ["derive", "env"] }
ctrlc = "3.4.0"
nom = "7.1.0"
rand = "0.8.4"
