[package]
name = "dnstest"
version = "0.1.0"
edition = "2021"
authors = ["Pieter Smit", "Adam Chalmers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
ascii = "1.1.0"
bitvec = "1.0.1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
clap = { version = "4.5.40", features = ["derive", "env"] }
ctrlc = "3.4.7"
nom = "8.0.0"
rand = "0.9.1"
